fix horizontal scroll fix in homepage

--- a/UI/public/css/site.css
+++ b/UI/public/css/site.css
@@ -43,6 +43,10 @@ body {
   margin-top: 5% !important;
 }
 
+.bs-gutter{
+  --bs-gutter-x: 0 !important;
+}
+
 #profileName {
   font-size: 13px;
 }
